# cheat-sheet-picker

./: .gitignore  .gitmodules  Cargo.toml  README.md  styles.css
.github/workflows/: build_deb.yml
models/: Cargo.toml
models/src/: lib.rs
src/: app.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  sheets.json
ui/scripts/: autocomplete.js  load_toc.js
ui/styles/: colors.css  search.css
